完善吉客云入库发货对接
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>